# hammer

./: .gitmodules  .travis.yml  Cargo.toml  NOTES.md  README.md  hamming.go  main.go  partition.go  partition_test.go  partitioning.go  partitioning_test.go  test.go
db/: hamming.go  key.go  key_test.go  kv.go  logger.go  lru_kv.go  lru_kv_test.go  map_kv.go  map_kv_test.go  partition.go  partition_test.go  partitioning.go  partitioning_test.go  test.go
perf/: README.md  main.go
src/: bench.rs  bin.rs  bit_matrix.rs  find_result.rs  hamming.rs  hash_map_set.rs  index.rs  lib.rs  main.rs  minhash.rs  partition.rs  partitioning.rs  partitions.rs  permutable.rs  result_accumulator.rs  simhash.rs  value.rs
src/bit_matrix/: as_bit_matrix.rs  bit_matrix.rs  fmt.rs  mod.rs  ops.rs  value.rs
src/db/: bench.rs  bit_matrix.rs  database.rs  deleted_value.rs  deletion_database.rs  deletion_db.rs  deletion_variant.rs  find_result.rs  hamming.rs  hash_map_set.rs  hashing.rs  id_map.rs  lru_set.rs  map_set.rs  mod.rs  partition.rs  partitioning.rs  permutable.rs  result_accumulator.rs  store.rs  substitution_database.rs  substitution_db.rs  substitution_variant.rs  typemap.rs  value.rs  window.rs
src/evicting_store/: arc.rs  entry.rs  eviction.rs  ghosted_list.rs  list.rs  mod.rs  page.rs
src/http/: add.rs  binary_handler.rs  delete.rs  mod.rs  query.rs  server.rs  vector_handler.rs
src/manager/: page.rs
web/: add.go  delete.go  find_request.go  find_response.go  http.go  insert_request.go  insert_response.go  query.go  remove_request.go  remove_response.go  server.go
(+15 files in other folders)
