[package]
name = "hammer"
version = "0.0.1"
authors = [ "Ryan Michael <kerinin@gmail.com>" ]

[[bin]]
name = "hammer"

[dependencies]
num = "*"
rand = "*"
byteorder = "*"
# docopt = "*"
# docopt_macros = "*"
# rustc-serialize = "*"

[dependencies.iron]
version = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"

[dev-dependencies]
quickcheck = "*"
quickcheck_macros = "*"
