[package]
name = "hammer"
version = "0.0.1"
authors = [ "Ryan Michael <kerinin@gmail.com>" ]

[lib]
name = "hammer"
path = "src/lib.rs"

[[bin]]
name = "hammer"
path = "src/bin.rs"

[dependencies]
num = "*"
rand = "*"
byteorder = "0.4"
iron = "*"
router = "*"
persistent = "*"
bodyparser = "*"
rustc-serialize = "*"
docopt = "*"
# docopt_macros = "*"
# rustc-serialize = "*"

[dev-dependencies]
quickcheck = "*"
